[package]
name = "little-anyhow"
version = "0.1.0"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "Vendorable error type with anyhow-style stack trace"
readme = "README.md"
homepage = "https://github.com/EricCrosson/little-anyhow"

[dependencies]
